# Programming_Paradigms

./: README.md
Assignment_1/: CMakeLists.txt  a10.c  a2.c  a3.c  a7.c  a8.c
Assignment_2/: CMakeLists.txt  a3.cpp  a4.cpp
Assignment_3/: a1.cpp  a3.cpp  a4.cpp  a6.cpp  myclass.h
Assignment_4/: a1.cpp  a3.cpp  a5.cpp
Assingment_1/: a1.c  a11.c  a12.c  a4.c  a5.c  a6.c  a9.c
Assingment_2/: a1.cpp  a2.cpp  a5.cpp
Assingment_3/: CMakeLists.txt  a2.cpp  a5.cpp  a7.cpp
Assingment_4/: a2.cpp  a4.cpp
