cmake_minimum_required(VERSION 3.12)
project(Assingment_3)

set(CMAKE_CXX_STANDARD 14)

add_executable(Assingment_3
        a1.cpp
        a2.cpp
        a3.cpp
        a4.cpp myclass.h a5.cpp a7.cpp a6.cpp)

add_executable(a1 a1.cpp)
add_executable(a2 a2.cpp)
add_executable(a3 a3.cpp)
add_executable(a4 a4.cpp)
add_executable(a5 a5.cpp)
add_executable(a7 a7.cpp)